# finance-lake

./: .gitignore  .user.yml  CLAUDE.md  README.md  dbt_project.yml  flake.nix  profiles.yml  pyproject.toml
dbt/models/gold/analytics/: cash_flow_monthly.sql  quality_alerts.sql  semantic_transactions.sql  spending_by_category.sql  transfer_review_queue.sql
dbt/models/gold/positions/: net_worth_daily.sql
dbt/models/silver/: _silver__sources.yml  investment_theses.sql  reconciliation_gaps.sql  schema.yml
dbt/models/silver/ledger/: fact_transactions.sql  fact_transfers.sql
dbt/seeds/: dim_account_normalization.csv  dim_account_normalization_example.csv  dim_categories.example.csv  dim_category_overrides.example.csv  dim_category_rules.csv  dim_holders.csv  dim_holders.example.csv  dim_transfer_rules.csv  schema.yml
embed_enrich/: __init__.py  __main__.py  client.py  duckdb_conn.py  normalise.py
foundry/: _telemetry.py
ingest/: core.py  sources.py
ingest/_lib/: bronze.py
ingest/adapters/: inbox_banking.py  local.py  paperless.py
ingest/banking/: statements.py
ingest/brokers/: questrade.py
ingest/obsidian/: theses.py
models/gold/: net_worth_daily.sql  schema.yml
models/gold/analytics/: data_completeness.sql  disposable_income.sql  semantic_transactions.sql  spending_by_category.sql  transfer_review_queue.sql
models/silver/: _silver__sources.yml  dim_accounts.sql  fact_transactions.sql  schema.yml
models/silver/ledger/: dim_accounts.sql  dim_merchants.sql  fact_transactions.sql  fact_transfers.sql  review_unmapped_holders.sql
openwebui_tools/: finance_tools.py
scripts/: dev_bootstrap.py  dev_init.py  ingest_statements.py
seeds/: README.md  dim_budgets.csv  dim_budgets.example.csv  dim_categories.csv  dim_category_rules.example.csv  schema.yml
tests/: test_normalise.py
