[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["embed_enrich", "ingest", "foundry"]

[project]
name = "foundry"
version = "0.3.0"
description = "Decision intelligence data lake — ingest, dbt models, and MCP tools"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.0",
    "duckdb>=1.4.4",
    "openai>=1.54.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "statement-extract",
    "questrade-extract",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "pyyaml>=6.0",
]

[project.scripts]
ingest-paperless-hook = "ingest.adapters.paperless:main"
ingest-questrade = "ingest.brokers.questrade:main"
ingest-inbox-banking = "ingest.adapters.inbox_banking:main"
ingest-obsidian-theses = "ingest.obsidian.theses:main"

[tool.uv.sources]
statement-extract = { git = "https://github.com/lorcan17/statement-extract", rev = "d9fb702897cc1883448b3b619cb2f34d776e7781" }
questrade-extract = { git = "https://github.com/lorcan17/questrade-extract", rev = "5a83c99" }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
